--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/designdesign.css">
 </head>
 <body>
-    <h1>My bomboclat portfolio</h1>
+    <h1>My portfolio</h1>
     <script src="js/main.js"></script>
 </body>
 </html>
